# bitsy

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE.mmd  ARCHITECTURE_VISUAL.txt  BITSY_AI_SUPPORT_QUESTION_SET.md  BITSY_FIRST_SALES_SPRINT.md  BITSY_GO_TO_MARKET_STRATEGY.md  BITSY_MARKET_RESEARCH_NEXT_STEPS.md  BITSY_OUTREACH_FIRST_CAMPAIGN.md  BITSY_SAMPLE_REPORT_TEMPLATE.md  BITSY_VIDEO_SCRIPT_BANK.md  BUILD_SUMMARY.txt  CONSUMER_SIMULATOR_GUIDE.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_CHECKLIST.md  PRICING_AND_COSTS.md  QUICK_START.md  README.md  SIMULATION_ENGINE_OVERVIEW.md  SIMULATOR_BUILT.md  controller.sh  program.md  vercel.json
backend/: ARCHITECTURE_DIAGRAM.txt  HOW_IT_WORKS.md  IMPLEMENTATION.md  README.md  __init__.py  explain_engine.py  main.py  play_with_simulator.py  project_structure.txt  pyproject.toml  simple_test.py  test_scenarios.sh  visualize_architecture.py
backend/api/: app.py  models.py
backend/core/: cache.py  database.py
backend/data/: assembler.py  llm_collector.py  mock_data.py  signal_scraper.py
backend/jobs/: daily_pipeline.py
backend/models/: predictor.py  surrogate.py  trainer.py
backend/pipeline/: benchmark.py  brand_domains.py  budget_guard.py  competitor_analyzer.py  competitor_crawl_job.py  content_analyzer.py  convex_client.py  engine.py  scripted_crawler.py  site_crawler.py  step1_raw_call.py  step2_structured.py  step3_multimodel.py  step4_variance.py  step5_collect.py  step5_data.json  step6_features.json  step6_features.py  step7_model.json  step7_surrogate.py  step8_whatif.py
backend/simulation/: simulator.py
(+177 files in other folders)
