[tool.poetry]
name = "bitsy-backend"
version = "0.1.0"
description = "Bitsy: AI Search Visibility Simulation Engine"
authors = ["DD <dd@bitsy.ai>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
shap = "^0.43.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.14.3"
openai = "^2.31.0"
anthropic = "^0.95.0"
google-genai = "1.0.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
